<resources>
    <string name="app_name">Talk Tonic</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to">Welcome  To</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send">SEND OTP</string>
    <string name="hello_blank_fragment">hiii otp</string>
    <string name="verify">VERIFY</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="about">About</string>
    <string name="calls">Calls</string>
    <string name="groups">Groups</string>
    <string name="chats">chats</string>
    <string name="setting">setting</string>
</resources>