<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:clipChildren="false"
       android:clipToPadding="false"
       android:orientation="vertical"
       android:padding="24dp"
       android:paddingTop="16dp">

      <ImageView
          android:layout_width="64dp"
          android:layout_height="64dp"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="48dp"
          android:layout_marginBottom="16dp"
          android:src="@drawable/ic_talktonic"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text="@string/welcome_to"
          android:textAppearance="@style/TextAppearance.TalkTonic.Title"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginBottom="132dp"
          android:text="@string/app_name"
          android:textAppearance="@style/TextAppearance.TalkTonic.Title"
          />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:hint="@string/mobile_number">

         <EditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_marginBottom="80dp"
           />
      </com.google.android.material.textfield.TextInputLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_send_otp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
            android:text="@string/send"
             />
      </RelativeLayout>


   </LinearLayout>

</ScrollView>