<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authenticate.LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/profile_img"
            android:src="@drawable/ic_user_default"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="50dp"
            />



        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginBottom="50dp"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <EditText
                android:id="@+id/user_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:inputType="text"
                android:layout_marginBottom="50dp"
                android:hint="@string/about" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_detail_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/save"
                />
        </RelativeLayout>


    </LinearLayout>

</ScrollView>
